--- a/day2/div.html
+++ b/day2/div.html
@@ -20,10 +20,7 @@
 
       </iframe>
 
-
-    <tr>
-      <td>3</td>
-    </tr><h1>유튜브</h1>
+      <h1>유튜브</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/HbBjHIwtjlI?si=Lc_hxShnFgfrfZf-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
