--- a/day2/exam1.html
+++ b/day2/exam1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,7 +7,10 @@
 <body>
   <table border="1">
 
-    <td colspan="3">유튜브</td>
+    <tr>
+      <td colspan="1">유튜브</td>
+    </tr>
+
 
     <tr>
       <td>안녕</td>
@@ -21,7 +24,7 @@
 
     <tr>
       <td>정신</td>
-    </Tr>
+    </tr>
 
     <tr>
       <td>그런식</td>
