오전 수업 재업로드

--- a/day3/exam11.html
+++ b/day3/exam11.html
@@ -1,10 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+  <style>
+    .bgBlue
+    {
+      background-color: Blue;
+      width: 330px;
+      height: 70px;
+
+      line-height: 70px;
+      text-align: Left;
+    }
+    .bgGray
+    {
+      position: relative;
+      top: -20px;
+
+      background-color: lightgray;
+      width: 330px;
+      height: 330px;
+      text-align: Left;
+    }
+    .bgWhite
+    {
+      background-color: White;
+      width: 180px;
+      height: 40px;
+      margin: 20px;
+      text-align: Left;
+    }
+    .whiteText
+    {
+      color: white;
+
+    }
+    .BlackText1
+    {
+      color: Black;
+    }
+    .BlackText2
+    {
+      color: Black;
+      padding: 10px;
+    }
+    .BoldText
+    {
+      font-size: 14px;
+      font-weight: bold;
+    }
+    .uptext
+    {
+      position: relative;
+      top: -3px;
+    }
+
+  </style>
 </head>
 <body>
-$END$
+  <div class="bgBlue whiteText"><p style="font-size:20px">
+    최도근님, 안녕하세요?</p></div>
+  <div class="bgGray BlackText1"><p style="font-size:20px">
+    페이스북 색감 따라하기</p>
+    <div class="bgWhite BlackText2"><p style="font-size:14px">
+      <span class="BoldText">박지성</span> SBS에서 월드컵보세요!</p></div>
+    <div class="bgWhite BlackText2"><p style="font-size:14px">
+      <span class="BoldText">안정환</span> MBC죠...</p></div>
+    <div class="bgWhite BlackText2"><p style="font-size:14px">
+      <span class="BoldText">이영표</span> KBS는 수신료의 가치를...</p></div>
+  </div>
 </body>
 </html>
