--- a/day3/border.html
+++ b/day3/border.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+  <style>
+    #div1
+    {
+      height: 100px;
+      border: 1px solid black;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 <body>
-$END$
+  <div id="div1">
+    카드
+  </div>
 </body>
 </html>
