--- a/day3/image_edit.html
+++ b/day3/image_edit.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+      .filter
+      {
+       /* filter: blur(1px);
+        filter: brightness(0.6);
+        filter: contrast(200%);
+        filter: drop-shadow(16px 16px 20px magenta);
+        filter: hue-rotate(45deg);
+        filter: invert(25%);
+        filter: opacity(23%);*/
+        /*filter: saturate(0%);
+        filter: sepia(60);*/
+      }
+
+      #title
+      {
+        font-size: 40px;
+      }
+
+      header{
+        font-size: 40px;
+      }
+
+    </style>
 </head>
 <body>
-$END$
+  <!--<div id="title">아이유</div>-->
+
+  <header>아이유</header>
+  <img src="../day2/img.png" width="300" class="filter">
+  <footer>는 아이가 아니에요</footer>
+  <zzz>이 태그는 뭐냐</zzz>
+  <yyy>div</yyy>
 </body>
 </html>
