--- a/day3/reactive.html
+++ b/day3/reactive.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>미디어 쿼리</title>
+    <style>
+        #div1{
+            background-color:  blue;
+        }
+        @media (max-width: 1280px) {
+            body{
+                font-size: x-large;
+            }
+            #div1{
+                background-color:  aqua;
+            }
+        }
+        @media (max-width: 600px) {
+            body{
+                font-size: small;
+            }
+            #div1{
+                background-color:  red;
+            }
+        }
+    </style>
 </head>
 <body>
-$END$
+<div id="div1">div</div>
 </body>
 </html>
