--- a/day4/div.html
+++ b/day4/div.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>인라인 방식</title>
+    <style>
+      div {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+      }
+    </style>
 </head>
 <body>
-$END$
+  <div onclick="alert('hello')"></div>
 </body>
 </html>
