--- a/day4/exam1.html
+++ b/day4/exam1.html
@@ -6,9 +6,7 @@
     <script>
       function i()
       {
-        confirm("이름을 입력하세요");
-
-        let name = prompt();
+        let name = prompt("수빈시가 알려준 안내창");
 
         while(true)
         {
