--- a/day6/exam2.html
+++ b/day6/exam2.html
@@ -89,7 +89,7 @@
         return;
       }
 
-      if (!isDie) {
+      if (!die) {
         score += 100;
         setScore(score);
       }
@@ -110,6 +110,21 @@
         const playerY = parseInt($("#player").css("bottom"))
     }
 
+    function fire() {
+      const id = Date.now();
+      $("#background").append(`<div id="${id}">총알 ${id}</div>`);
+
+      $(`#${id}`).css({
+        position: 'absolute',
+        left: parseInt($("#player").css("left")) + playerWidth,
+        bottom: parseInt($("#player").css("bottom")) + playerHeight / 2,
+      }).animate({
+        left: '+=500px' // 총알이 날아가는 방향
+      }, 1000, function() {
+        $(this).remove(); // 총알이 날아간 후 제거
+      });
+    }
+
     function gameLoop() {
       moveEnemy();
 
@@ -118,6 +133,10 @@
       }
       requestAnimationFrame(gameLoop);
     }
+
+    document.addEventListener("keydown", (event)=> {
+
+    })
 
     document.addEventListener("keydown", (event) =>{
       if(event.key === " ") {
@@ -136,13 +155,17 @@
     <div id="player">
       <img src="asset/slug.png" width="50px", height="50px">
     </div>
-
+    <div id="score">
+      SCORE : 0
+    </div>
     <div class="enemy" id="enemy">
       <img src="asset/enemy.png" width="100px">
     </div>
   </div>
-  <div id="score">
-    SCORE : 0
+
+  <div >
+
   </div>
+
 </body>
 </html>
