--- a/day6/exam2.html
+++ b/day6/exam2.html
@@ -6,9 +6,27 @@
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous">
   </script>
   <style>
+    .sliding-background {
+      background: url("asset/slugback.jpg");
+      width: 200%;
+      height: 100%;
+      animation: slide 10s linear infinite;
+    }
+
+    @keyframes slide {
+      from {
+        transform: translate(0, 0);
+      }
+
+      to {
+        transform: translate(-620px, 0);
+      }
+    }
+
+
     #background {
-      background-image: url("asset/slugback.jpg");
-      background-size: cover;
+      /*background-image: url("asset/slugback.jpg");
+      background-size: cover;*/
       position: absolute;
       width: 800px;
       height: 600px;
@@ -65,7 +83,7 @@
     }
 
     function moveEnemy() {
-      $(".enemy").css("right", `+=${enemySpeed}5px`);
+      $(".enemy").css("right", `+=${enemySpeed}px`);
 
       checkEnemyBounds();
     }
@@ -85,19 +103,17 @@
 
     function respawnEnemy() {
 
-      if (isSpawning) {
+      if (isSpawning || die) {
         return;
       }
 
-      if (!die) {
         score += 100;
         setScore(score);
-      }
 
-      isSpawning = true;
-      enemySpeed = Math.random() * 5 + 5; // 0.0 ~ 1.0
+        isSpawning = true;
+        enemySpeed = Math.random() * 5 + 5; // 0.0 ~ 1.0
 
-      const spawnTime = Math.random() * 1000 + 500; // 500 ~ 1500
+        const spawnTime = Math.random() * 1000 + 500; // 500 ~ 1500
 
       setTimeout(() => {
         $(".enemy").css("right", "-100px");
@@ -108,6 +124,10 @@
     function checkGameOver() {
         const playerX = parseInt($("#player").css("left"))
         const playerY = parseInt($("#player").css("bottom"))
+
+        if (playerLeft < -100) {
+          respawnEnemy();
+        }
     }
 
     function fire() {
@@ -129,7 +149,8 @@
       moveEnemy();
 
       if(checkGameOver()) {
-        isDie = true;
+        die = true;
+        return;
       }
       requestAnimationFrame(gameLoop);
     }
@@ -152,6 +173,8 @@
 </head>
 <body>
   <div id="background">
+    <div class="sliding-background"></div>
+
     <div id="player">
       <img src="asset/slug.png" width="50px", height="50px">
     </div>
